# autosnapgene

./: .bumpversion.cfg  .readthedocs.yml  .travis.yml  README.rst  make_setup_py.sh  pyproject.toml  setup.py
autosnapgene/: __init__.py  api.py  cli.py  errors.py  main.py  parser.py  util.py
autosnapgene/blocks/: __init__.py  alignments.py  enzymes.py  features.py  header.py  history.py  misc.py  notes.py  primers.py  sequences.py
docs/: annotations.rst  api.rst  conf.py  contributing.rst  features.rst  history.rst  index.rst  installation.rst  primers.rst  sequences.rst  traces.rst
tests/: conftest.py  test_alignments.py  test_api.py  test_blocks.py  test_dna.py  test_features.py  test_notes.py  test_parser.py  test_protein.py  test_util.py
tests/examples/: flag_tag.dna  flag_tag.prot  pet3a.dna  puc19.dna  puc19_bsai.dna  puc19_bsai_a.ab1  puc19_bsai_a.dna  puc19_bsai_ab.dna  puc19_bsai_abc.dna  puc19_bsai_b.ab1  puc19_bsai_c.ab1  t7_promoter.dna
