[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autosnapgene"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = "README.rst"
dynamic = ["version", "description"]
requires-python = "~=3.7"
dependencies = [
  'docopt',
  'arrow',
  'autoprop',
  'nonstdlib',
  'more_itertools',
]

[project.urls]
'Version Control' = 'https://github.com/kalekundert/autosnapgene'

[project.scripts]
autosnapgene = "autosnapgene.cli:main"

